samples/_failures_safe/1761420358_8e16f8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0bae3afa.c: In function ‘dijkstra_shortest_path’:
./samples/SAFE/__tmp_0bae3afa.c:151:20: error: missing terminating " character
  151 |             printf("Node %
      |                    ^~~~~~~
./samples/SAFE/__tmp_0bae3afa.c:151:13: error: expected expression at end of input
  151 |             printf("Node %
      |             ^~~~~~
./samples/SAFE/__tmp_0bae3afa.c:151:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0bae3afa.c:151:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0bae3afa.c:151:13: error: expected declaration or statement at end of input
